Fix title font size on mobile

--- a/source/_styles/style.styl
+++ b/source/_styles/style.styl
@@ -15,7 +15,6 @@ h3
     font-family "Gotham A", "Gotham B"
     font-style normal
     font-weight 700
-    line-height 1.5em
     text-shadow 0 0 16px rgba(77, 77, 79, .4)
     text-transform uppercase
 
@@ -33,13 +32,19 @@ h1
         font-size 30pt
         line-height 36pt
 
+    @media (max-width: 576px)
+        font-size 20pt
+        line-height 22pt
+
 h2
     font-style normal
     font-weight 700
     font-size 20pt
+    line-height 22pt
 
     @media (max-width: 768px)
         font-size 13pt
+        line-height 15pt
 
 p
 li
